# src_platform_clip-mdadm

./: CHANGELOG  Makefile.am  Makefile.in  README.md  configure  configure.ac
init/: Makefile.am  Makefile.in  mdadmd
man/: Makefile.am  Makefile.in  clip_mdadm.8
scripts/: Makefile.am  Makefile.in  clip-resync.sh
src/: Makefile.am  Makefile.in  mdadm.c
