# SPDX-License-Identifier: LGPL-2.1-or-later
# Copyright © 2007-2018 ANSSI. All Rights Reserved.
sbin_PROGRAMS = mdadmd
mdadmd_SOURCES = mdadm.c
mdadmd_LDFLAGS = -static 
mdadmd_CPPFLAGS= -O -Wall -Wextra -Wcast-qual -Wstrict-prototypes -Werror -fno-common -DMDADMSOCKET=\"/mounts/admin_priv/var/run/mdadm\"
